# advent-of-code

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/2024/: Cargo.toml
crates/2024/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  lib.rs
crates/common/: Cargo.toml
crates/common/src/: utilities.rs
src/: main.rs
